--- a/src/Downcast.Bookmarks.API/Downcast.Bookmarks.API.csproj
+++ b/src/Downcast.Bookmarks.API/Downcast.Bookmarks.API.csproj
@@ -7,15 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Downcast.Common.Error.Handler" Version="0.0.2" />
-        <PackageReference Include="Downcast.Common.Logging" Version="0.0.5" />
+        <PackageReference Include="Downcast.Common.Errors.Handler" Version="0.0.7" />
+        <PackageReference Include="Downcast.Common.Logging" Version="0.0.6" />
         <PackageReference Include="Downcast.SessionManager.SDK.Authentication.Handler" Version="0.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
     </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Downcast.SessionManager.Authentication.Handler\Downcast.SessionManager.Authentication.Handler.csproj" />
-      <ProjectReference Include="..\Downcast.SessionManager.SDK.Extensions\Downcast.SessionManager.SDK.Extensions.csproj" />
-    </ItemGroup>
+    
 
 </Project>
