--- a/src/Downcast.Bookmarks.API/Downcast.Bookmarks.API.csproj
+++ b/src/Downcast.Bookmarks.API/Downcast.Bookmarks.API.csproj
@@ -9,8 +9,13 @@
     <ItemGroup>
         <PackageReference Include="Downcast.Common.Errors.Handler" Version="0.0.7" />
         <PackageReference Include="Downcast.Common.Logging" Version="0.0.6" />
+        <PackageReference Include="Downcast.SessionManager.SDK.Authentication.Extensions" Version="0.0.3" />
         <PackageReference Include="Downcast.SessionManager.SDK.Authentication.Handler" Version="0.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Downcast.Bookmarks.Manager\Downcast.Bookmarks.Manager.csproj" />
     </ItemGroup>
     
 </Project>
