--- a/src/Downcast.Bookmarks.API/Properties/launchSettings.json
+++ b/src/Downcast.Bookmarks.API/Properties/launchSettings.json
@@ -16,6 +16,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7206;http://localhost:5110",
       "environmentVariables": {
+        "FIRESTORE_EMULATOR_HOST": "localhost:8080", 
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
