--- a/src/Downcast.Bookmarks.Repository/Downcast.Bookmarks.Repository.csproj
+++ b/src/Downcast.Bookmarks.Repository/Downcast.Bookmarks.Repository.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Downcast.Common.Errors" Version="0.0.8" />
+      <PackageReference Include="Firestore.Typed.Client" Version="1.0.0" />
       <PackageReference Include="Google.Cloud.Firestore" Version="3.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     </ItemGroup>
