refactor to respect data model

--- a/src/Downcast.Bookmarks.API/appsettings.json
+++ b/src/Downcast.Bookmarks.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "RepositoryOptions": {
-    "Collection": "bookmarks",
-    "ProjectId": "downcast-698d1"
+    "BookmarksCollectionName": "bookmarks",
+    "ProjectId": "downcast-698d1",
+    "UsersCollectionName": "users"
   }
 }
