--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -17,6 +17,11 @@ jobs:
       id-token: write
       contents: read
       checks: write
+    services: # ramp up a firestore emulator instance
+      firestore:
+        image: mtlynch/firestore-emulator:latest
+        ports:
+          - 8080:8080
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET
@@ -37,4 +42,4 @@ jobs:
         with:
           name: .NET Tests                  # Name of the check run which will be created
           path: test/**/TestResults/test-results.trx    # Path to test results
-          reporter: dotnet-trx              # Format of test results  
+          reporter: dotnet-trx              
